# exome-results-browsers

./: .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .stylelintrc.js  .tool-versions  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  babel.config.js  build-docker-image.sh  build.sh  cloudbuild.yaml  nodemon.json  package.json  start.sh  tsconfig.json
data_pipeline/: README.md  WRITE_RESULTS_FILES.md  pipeline_config.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_pipeline.py  start_dataproc_cluster.py  stop_dataproc_cluster.py  write_results_files.py
data_pipeline/data_pipeline/: config.py  gene_filter_utils.py  paths.py  validation.py
data_pipeline/data_pipeline/datasets/asc/: asc_gene_results.py  asc_variant_results.py
data_pipeline/data_pipeline/datasets/bipex/: bipex_gene_results.py  bipex_variant_results.py
data_pipeline/data_pipeline/datasets/bipex2/: bipex2_gene_results.py  bipex2_variant_results.py
data_pipeline/data_pipeline/datasets/clinvar/: clinvar_grch38.py  clinvar_grch38_dummy_genes.py
data_pipeline/data_pipeline/datasets/epi25/: epi25_gene_results.py  epi25_variant_results.py
data_pipeline/data_pipeline/datasets/gp2/: gp2_combine_input_datasets.py  gp2_gene_results.py  gp2_variant_results.py  test_gp2_pipeline.py
data_pipeline/data_pipeline/datasets/ibd/: ibd_gene_results.py  (+1 more)
data_pipeline/data_pipeline/pipelines/: combine_datasets.py  prepare_dataset.py  prepare_datasets.py  prepare_downloads.py  prepare_gene_models.py
(+253 files in other folders)
